# db_workshop

./: .envrc.example  Makefile  README.md  docker-compose.yml  main.py  pyproject.toml
.github/: copilot-instructions.md
docs/alembic_soft_delete_guide/: 00_QUICK_REFERENCE.md  01_STEP_BY_STEP_ALEMBIC_SETUP.md  02_HANDS_ON_EXERCISES.md  03_AUTO_GENERATE_MIGRATIONS.md  04_COMPLETE_WORKFLOW_AND_MAKEFILE.md  05_PRACTICAL_SCENARIOS.md  06_EXISTING_DATABASE_SETUP.md  07_FASTAPI_ALEMBIC_INDUSTRY_SETUP.md  ALEMBIC_THEORY_AND_SOFT_DELETE.md  IMPLEMENTATION_GUIDE.md  README.md
docs/database_schema_update/: DATABASE_SCHEMA_MIGRATION.md  SCHEMA_DRIFT_QUICK_FIX.md
docs/idempotency/1/: ACTION_PLAN.md  IDEMPOTENCY_ANALYSIS.md  IDEMPOTENCY_DEEP_DIVE.md  IMPLEMENTATION_GUIDE.md  VISUAL_GUIDE.md
docs/idempotency/2/: CURRENT_STATE_ANALYSIS.md
docs/idempotency/3/: IDEMPOTENCY_QUICK_REFERENCE.md  IDEMPOTENCY_WORKFLOW_COMPLETE.md
docs/pagination/: 00_WHAT_IS_PAGINATION.md  01_TYPES_OF_PAGINATION.md  02_BEST_PRACTICES.md  03_APPLIED_TO_YOUR_PROJECT.md  README.md
docs/search/: 00_SEARCH_CONCEPTS.md  01_BEST_PRACTICES.md  02_APPLIED_TO_TODO.md
docs/sqlite_to_postgress/: 00_SQLITE_TO_POSTGRES.md  01_SCHEMA_PER_PROJECT_SETUP.md
hooks/: pre-commit
scripts/: extend_todo_data.py  extra_todo_data.json
workshop/00_personal_TODO/: Makefile  README.md  config.py  database.py  main.py  models.py  schemas.py  seed_data.json  todo_api.py  todo_crud.py
workshop/00_personal_todo/: .envrc.example  Makefile  README.md  docker-compose.yml  main.py  models.py  seed_data.json
(+21 files in other folders)
