[project]
name = "db-workshop"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.4",
    "faker>=40.4.0",
    "fastapi>=0.129.0",
    "httpx>=0.28.1",
    "loguru>=0.7.3",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "ruff>=0.15.1",
    "sqlmodel>=0.0.33",
    "uvicorn>=0.40.0",
]
